fixed-showcase-bg-image-not-visible

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -82,8 +82,12 @@ ul {
 /* <---------------- End of navigation ------------------> */
 
 /* <================ Hero ===================> */
+#hero-section {
+  background: black;
+}
 .hero-section-container {
-  background: url("assets/images/hero-bg.jpg") no-repeat center center/cover;
+  /* background: url("/assets/images/hero-bg.jpg") no-repeat center center/cover; */
+  background: black;
   height: 100%;
   width: 100%;
   display: flex;
